--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -104,6 +104,7 @@
     <Content Include="images\png\service.png" />
     <Content Include="images\png\shippingbox.png" />
     <Content Include="images\png\shoppingcrart.png" />
+    <Content Include="images\png\user.png" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
