--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -97,7 +97,7 @@
     <Content Include="css\style.css" />
     <Content Include="images\jpeg\brands.jpg" />
     <Content Include="images\jpeg\mainbanner.jpg" />
-    <Content Include="images\png\boot.png" />
+    <Content Include="images\products\boot.png" />
     <Content Include="images\png\casualshoes.png" />
     <Content Include="images\png\facebook.png" />
     <Content Include="images\png\instagram.png" />
