--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -119,6 +119,7 @@
     <Content Include="pages\Cart.aspx" />
     <Content Include="pages\Login.aspx" />
     <Content Include="pages\ProductDetails.aspx" />
+    <Content Include="pages\SignUp.aspx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -134,6 +135,7 @@
     <Content Include="pages\AboutUs.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="data_access_layer\Connection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
@@ -218,6 +220,13 @@
     </Compile>
     <Compile Include="pages\ProductDetails.aspx.designer.cs">
       <DependentUpon>ProductDetails.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\SignUp.aspx.cs">
+      <DependentUpon>SignUp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\SignUp.aspx.designer.cs">
+      <DependentUpon>SignUp.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
