dal folder and models folder added. customer class added in models class. admin class added in dal folder for crud operations. ado .net connection works and customer can now be added from the signup page

--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -135,7 +135,8 @@
     <Content Include="pages\AboutUs.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="data_access_layer\Connection.cs" />
+    <Compile Include="data_access_layer\Admin.cs" />
+    <Compile Include="models\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
