--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -205,6 +205,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="pages\TESTING.aspx" />
     <Content Include="Site1.Master" />
     <Content Include="pages\Sneakers.aspx" />
     <Content Include="pages\Sandals.aspx" />
@@ -232,7 +233,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="data_access_layer\Admin.cs" />
+    <Compile Include="data_access_layer\Connection.cs" />
+    <Compile Include="data_access_layer\ProductDAL.cs" />
     <Compile Include="models\Customer.cs" />
+    <Compile Include="models\Product.cs" />
+    <Compile Include="pages\TESTING.aspx.cs">
+      <DependentUpon>TESTING.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\TESTING.aspx.designer.cs">
+      <DependentUpon>TESTING.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
