--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -108,99 +108,99 @@
     <Content Include="images\products\boots\1320\1.jpg" />
     <Content Include="images\products\boots\1320\2.jpg" />
     <Content Include="images\products\boots\1320\3.jpg" />
-    <Content Include="images\products\boots\1460-1.jpg" />
-    <Content Include="images\products\boots\1460-2.jpg" />
-    <Content Include="images\products\boots\1460-3.jpg" />
-    <Content Include="images\products\boots\1580-1.jpg" />
-    <Content Include="images\products\boots\1580-2.jpg" />
-    <Content Include="images\products\boots\1580-3.jpg" />
-    <Content Include="images\products\boots\1620-1.jpg" />
-    <Content Include="images\products\boots\1620-2.jpg" />
-    <Content Include="images\products\boots\1620-3.jpg" />
-    <Content Include="images\products\boots\1920-1.jpg" />
-    <Content Include="images\products\boots\1920-2.jpg" />
-    <Content Include="images\products\boots\1920-3.jpg" />
-    <Content Include="images\products\boots\Navy1.jpg" />
-    <Content Include="images\products\boots\Navy2.jpg" />
-    <Content Include="images\products\boots\Navy3.jpg" />
-    <Content Include="images\products\boots\Steady1.jpg" />
-    <Content Include="images\products\boots\Steady2.jpg" />
-    <Content Include="images\products\boots\Steady3.jpg" />
-    <Content Include="images\products\boots\Sturdy1.jpg" />
-    <Content Include="images\products\boots\Sturdy2.jpg" />
-    <Content Include="images\products\boots\Sturdy3.jpg" />
-    <Content Include="images\products\lowshoes\California1.jpg" />
-    <Content Include="images\products\lowshoes\California2.jpg" />
-    <Content Include="images\products\lowshoes\California3.jpg" />
-    <Content Include="images\products\lowshoes\London1.jpg" />
-    <Content Include="images\products\lowshoes\London2.jpg" />
-    <Content Include="images\products\lowshoes\London3.jpg" />
-    <Content Include="images\products\lowshoes\Merchant1.jpg" />
-    <Content Include="images\products\lowshoes\Merchant2.jpg" />
-    <Content Include="images\products\lowshoes\Merchant3.jpg" />
-    <Content Include="images\products\lowshoes\Moscow1.jpg" />
-    <Content Include="images\products\lowshoes\Moscow2.jpg" />
-    <Content Include="images\products\lowshoes\Moscow3.jpg" />
-    <Content Include="images\products\lowshoes\NewYork1.jpg" />
-    <Content Include="images\products\lowshoes\NewYork2.jpg" />
-    <Content Include="images\products\lowshoes\NewYork3.jpg" />
-    <Content Include="images\products\lowshoes\Rio1.jpg" />
-    <Content Include="images\products\lowshoes\Rio2.jpg" />
-    <Content Include="images\products\lowshoes\Rio3.jpg" />
-    <Content Include="images\products\lowshoes\SanDiego1.jpg" />
-    <Content Include="images\products\lowshoes\SanDiego2.jpg" />
-    <Content Include="images\products\lowshoes\SanDiego3.jpg" />
-    <Content Include="images\products\lowshoes\SantaMonica1.jpg" />
-    <Content Include="images\products\lowshoes\SantaMonica2.jpg" />
-    <Content Include="images\products\lowshoes\SantaMonica3.jpg" />
-    <Content Include="images\products\sandals\Adilette1.jpg" />
-    <Content Include="images\products\sandals\Adilette2.jpg" />
-    <Content Include="images\products\sandals\Adilette3.jpg" />
-    <Content Include="images\products\sandals\Bali1.jpg" />
-    <Content Include="images\products\sandals\bali2.jpg" />
-    <Content Include="images\products\sandals\bali3.jpg" />
-    <Content Include="images\products\sandals\Elephant1.jpg" />
-    <Content Include="images\products\sandals\Elephant2.jpg" />
-    <Content Include="images\products\sandals\Elephant3.jpg" />
-    <Content Include="images\products\sandals\Havanna1.jpg" />
-    <Content Include="images\products\sandals\havanna2.jpg" />
-    <Content Include="images\products\sandals\Havanna3.jpg" />
-    <Content Include="images\products\sandals\Hawaii1.jpg" />
-    <Content Include="images\products\sandals\Hawaii2.jpg" />
-    <Content Include="images\products\sandals\hawaii3.jpg" />
-    <Content Include="images\products\sandals\SkinnyMax1.jpg" />
-    <Content Include="images\products\sandals\SkinnyMax2.jpg" />
-    <Content Include="images\products\sandals\SkinnyMax3.jpg" />
-    <Content Include="images\products\sandals\Teva1.jpg" />
-    <Content Include="images\products\sandals\Teva2.jpg" />
-    <Content Include="images\products\sandals\Teva3.jpg" />
-    <Content Include="images\products\sandals\Traction1.jpg" />
-    <Content Include="images\products\sandals\Traction2.jpg" />
-    <Content Include="images\products\sandals\Traction3.jpg" />
-    <Content Include="images\products\sneakers\Bronx1.jpg" />
-    <Content Include="images\products\sneakers\Bronx2.jpg" />
-    <Content Include="images\products\sneakers\Bronx3.jpg" />
-    <Content Include="images\products\sneakers\Cortez1.jpg" />
-    <Content Include="images\products\sneakers\Cortez2.jpg" />
-    <Content Include="images\products\sneakers\Cortez3.jpg" />
+    <Content Include="images\products\boots\1460\1.jpg" />
+    <Content Include="images\products\boots\1460\2.jpg" />
+    <Content Include="images\products\boots\1460\3.jpg" />
+    <Content Include="images\products\boots\1580\1.jpg" />
+    <Content Include="images\products\boots\1580\2.jpg" />
+    <Content Include="images\products\boots\1580\3.jpg" />
+    <Content Include="images\products\boots\1620\1.jpg" />
+    <Content Include="images\products\boots\1620\2.jpg" />
+    <Content Include="images\products\boots\1620\3.jpg" />
+    <Content Include="images\products\boots\1920\1.jpg" />
+    <Content Include="images\products\boots\1920\2.jpg" />
+    <Content Include="images\products\boots\1920\3.jpg" />
+    <Content Include="images\products\boots\Navy\1.jpg" />
+    <Content Include="images\products\boots\Navy\2.jpg" />
+    <Content Include="images\products\boots\Navy\3.jpg" />
+    <Content Include="images\products\boots\Steady\1.jpg" />
+    <Content Include="images\products\boots\Steady\2.jpg" />
+    <Content Include="images\products\boots\Steady\3.jpg" />
+    <Content Include="images\products\boots\Sturdy\1.jpg" />
+    <Content Include="images\products\boots\Sturdy\2.jpg" />
+    <Content Include="images\products\boots\Sturdy\3.jpg" />
+    <Content Include="images\products\lowshoes\California\1.jpg" />
+    <Content Include="images\products\lowshoes\California\2.jpg" />
+    <Content Include="images\products\lowshoes\California\3.jpg" />
+    <Content Include="images\products\lowshoes\London\1.jpg" />
+    <Content Include="images\products\lowshoes\London\2.jpg" />
+    <Content Include="images\products\lowshoes\London\3.jpg" />
+    <Content Include="images\products\lowshoes\Merchant\1.jpg" />
+    <Content Include="images\products\lowshoes\Merchant\2.jpg" />
+    <Content Include="images\products\lowshoes\Merchant\3.jpg" />
+    <Content Include="images\products\lowshoes\Moscow\1.jpg" />
+    <Content Include="images\products\lowshoes\Moscow\2.jpg" />
+    <Content Include="images\products\lowshoes\Moscow\3.jpg" />
+    <Content Include="images\products\lowshoes\NewYork\1.jpg" />
+    <Content Include="images\products\lowshoes\NewYork\2.jpg" />
+    <Content Include="images\products\lowshoes\NewYork\3.jpg" />
+    <Content Include="images\products\lowshoes\Rio\1.jpg" />
+    <Content Include="images\products\lowshoes\Rio\2.jpg" />
+    <Content Include="images\products\lowshoes\Rio\3.jpg" />
+    <Content Include="images\products\lowshoes\SanDiego\1.jpg" />
+    <Content Include="images\products\lowshoes\SanDiego\2.jpg" />
+    <Content Include="images\products\lowshoes\SanDiego\3.jpg" />
+    <Content Include="images\products\lowshoes\SantaMonica\1.jpg" />
+    <Content Include="images\products\lowshoes\SantaMonica\2.jpg" />
+    <Content Include="images\products\lowshoes\SantaMonica\3.jpg" />
+    <Content Include="images\products\sandals\Adilette\1.jpg" />
+    <Content Include="images\products\sandals\Adilette\2.jpg" />
+    <Content Include="images\products\sandals\Adilette\3.jpg" />
+    <Content Include="images\products\sandals\Bali\1.jpg" />
+    <Content Include="images\products\sandals\Bali\2.jpg" />
+    <Content Include="images\products\sandals\Bali\3.jpg" />
+    <Content Include="images\products\sandals\Elephant\1.jpg" />
+    <Content Include="images\products\sandals\Elephant\2.jpg" />
+    <Content Include="images\products\sandals\Elephant\3.jpg" />
+    <Content Include="images\products\sandals\Havanna\1.jpg" />
+    <Content Include="images\products\sandals\Havanna\2.jpg" />
+    <Content Include="images\products\sandals\Havanna\3.jpg" />
+    <Content Include="images\products\sandals\Hawaii\1.jpg" />
+    <Content Include="images\products\sandals\Hawaii\2.jpg" />
+    <Content Include="images\products\sandals\Hawaii\3.jpg" />
+    <Content Include="images\products\sandals\SkinnyMax\1.jpg" />
+    <Content Include="images\products\sandals\SkinnyMax\2.jpg" />
+    <Content Include="images\products\sandals\SkinnyMax\3.jpg" />
+    <Content Include="images\products\sandals\Teva\1.jpg" />
+    <Content Include="images\products\sandals\Teva\2.jpg" />
+    <Content Include="images\products\sandals\Teva\3.jpg" />
+    <Content Include="images\products\sandals\Traction\1.jpg" />
+    <Content Include="images\products\sandals\Traction\2.jpg" />
+    <Content Include="images\products\sandals\Traction\3.jpg" />
+    <Content Include="images\products\sneakers\Bronx\1.jpg" />
+    <Content Include="images\products\sneakers\Bronx\2.jpg" />
+    <Content Include="images\products\sneakers\Bronx\3.jpg" />
+    <Content Include="images\products\sneakers\Cortez\1.jpg" />
+    <Content Include="images\products\sneakers\Cortez\2.jpg" />
+    <Content Include="images\products\sneakers\Cortez\3.jpg" />
     <Content Include="images\products\sneakers\G6\1.jpg" />
     <Content Include="images\products\sneakers\G6\2.jpg" />
     <Content Include="images\products\sneakers\G6\3.jpg" />
-    <Content Include="images\products\sneakers\Gazelle1.jpg" />
-    <Content Include="images\products\sneakers\Gazelle2.jpg" />
-    <Content Include="images\products\sneakers\Gazelle3.jpg" />
-    <Content Include="images\products\sneakers\Hamburg1.jpg" />
-    <Content Include="images\products\sneakers\Hamburg2.jpg" />
-    <Content Include="images\products\sneakers\Hamburg3.jpg" />
-    <Content Include="images\products\sneakers\Harambe1.jpg" />
-    <Content Include="images\products\sneakers\Harambe2.jpg" />
-    <Content Include="images\products\sneakers\Harambe3.jpg" />
-    <Content Include="images\products\sneakers\O2Max1.jpg" />
-    <Content Include="images\products\sneakers\O2Max2.jpg" />
-    <Content Include="images\products\sneakers\O2Max3.jpg" />
-    <Content Include="images\products\sneakers\Originals1.jpg" />
-    <Content Include="images\products\sneakers\Originals2.jpg" />
-    <Content Include="images\products\sneakers\Originals3.jpg" />
+    <Content Include="images\products\sneakers\Gazelle\1.jpg" />
+    <Content Include="images\products\sneakers\Gazelle\2.jpg" />
+    <Content Include="images\products\sneakers\Gazelle\3.jpg" />
+    <Content Include="images\products\sneakers\Hamburg\1.jpg" />
+    <Content Include="images\products\sneakers\Hamburg\2.jpg" />
+    <Content Include="images\products\sneakers\Hamburg\3.jpg" />
+    <Content Include="images\products\sneakers\Harambe\1.jpg" />
+    <Content Include="images\products\sneakers\Harambe\2.jpg" />
+    <Content Include="images\products\sneakers\Harambe\3.jpg" />
+    <Content Include="images\products\sneakers\O2Max\1.jpg" />
+    <Content Include="images\products\sneakers\O2Max\2.jpg" />
+    <Content Include="images\products\sneakers\O2Max\3.jpg" />
+    <Content Include="images\products\sneakers\Originals\1.jpg" />
+    <Content Include="images\products\sneakers\Originals\2.jpg" />
+    <Content Include="images\products\sneakers\Originals\3.jpg" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
