--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -243,6 +243,7 @@
   <ItemGroup>
     <Compile Include="data_access_layer\Admin.cs" />
     <Compile Include="data_access_layer\Connection.cs" />
+    <Compile Include="data_access_layer\OrderDetailDAL.cs" />
     <Compile Include="data_access_layer\ProductDAL.cs" />
     <Compile Include="models\Customer.cs" />
     <Compile Include="models\OrderDetail.cs" />
