--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -226,6 +226,7 @@
     <Content Include="pages\Login.aspx" />
     <Content Include="pages\ProductDetails.aspx" />
     <Content Include="pages\SignUp.aspx" />
+    <Content Include="pages\ConfirmedBuy.aspx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -361,6 +362,13 @@
     </Compile>
     <Compile Include="pages\SignUp.aspx.designer.cs">
       <DependentUpon>SignUp.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\ConfirmedBuy.aspx.cs">
+      <DependentUpon>ConfirmedBuy.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\ConfirmedBuy.aspx.designer.cs">
+      <DependentUpon>ConfirmedBuy.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
