--- a/casualshoes/casualshoes/Web.config
+++ b/casualshoes/casualshoes/Web.config
@@ -5,6 +5,12 @@
   -->
 <configuration>
   
+  <customErrors mode="On" defaultRedirect="~/Pages/Error.aspx">
+    <error statusCode="404" redirect="~/Pages/404.aspx" />
+</customErrors>
+  
+    
+
   <connectionStrings>
       <add name="CasualShoesDBConnectionString" connectionString="Data Source=(local);Initial Catalog=CasualShoesDB;Integrated Security=True"
           providerName="System.Data.SqlClient" />
