--- a/casualshoes/casualshoes/Web.config
+++ b/casualshoes/casualshoes/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   
-  <customErrors mode="On" defaultRedirect="~/Pages/Error.aspx">
+  <!--<customErrors mode="On" defaultRedirect="~/Pages/Error.aspx">
     <error statusCode="404" redirect="~/Pages/404.aspx" />
-</customErrors>
+</customErrors>-->
   
     
 
