--- a/casualshoes/casualshoes/Web.config
+++ b/casualshoes/casualshoes/Web.config
@@ -5,9 +5,7 @@
   -->
 <configuration>
   
-  <!--<customErrors mode="On" defaultRedirect="~/Pages/Error.aspx">
-    <error statusCode="404" redirect="~/Pages/404.aspx" />
-</customErrors>-->
+ 
   
     
 
@@ -16,6 +14,9 @@
           providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+     <customErrors mode="On" defaultRedirect="~/Pages/Error.aspx">
+    <error statusCode="404" redirect="~/Pages/404.aspx" />
+</customErrors>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
     <httpModules>
