placed the add confirmed orderdetal method inside new DAL class

--- a/casualshoes/casualshoes/casualshoes.csproj
+++ b/casualshoes/casualshoes/casualshoes.csproj
@@ -246,6 +246,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="data_access_layer\Admin.cs" />
+    <Compile Include="data_access_layer\ConfirmedOrderDetailDAL.cs" />
     <Compile Include="data_access_layer\Connection.cs" />
     <Compile Include="data_access_layer\OrderDetailDAL.cs" />
     <Compile Include="data_access_layer\OrderHeadDAL.cs" />
